--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AT&T - Signin</title>
+    <title>Welcome Back!</title>
   </head>
   <body>
     <div id="root"></div>
